--- a/.github/workflows/hello-action-workflow.yml
+++ b/.github/workflows/hello-action-workflow.yml
@@ -13,10 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     name: Test Hello Action
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@cb605e52c26070c328afc4562f0b4ada7618a84e # v2.10.4
+        with:
+          egress-policy: audit
+
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       
       - name: Run Hello Action
-        uses: sailikhith-stepsecurity/hello-action@v1  
+        uses: sailikhith-stepsecurity/hello-action@a81b1b4a4bb57a918a384a4fddeee191bfc6505c # v1  
         with:
           message: ${{ github.event.inputs.message }}
