--- a/.github/workflows/hello-action-workflow.yml
+++ b/.github/workflows/hello-action-workflow.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Test Hello Action
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@cb605e52c26070c328afc4562f0b4ada7618a84e # v2.10.4
+        with:
+          egress-policy: audit
+
       - name: Checkout
         uses: actions/checkout@v4
       
