--- a/.github/workflows/hello-action-workflow.yml
+++ b/.github/workflows/hello-action-workflow.yml
@@ -14,9 +14,9 @@ jobs:
     name: Test Hello Action
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
       
       - name: Run Hello Action
-        uses: sailikhith-stepsecurity/hello-action@a81b1b4a4bb57a918a384a4fddeee191bfc6505c # v1  
+        uses: sailikhith-stepsecurity/hello-action@v1  
         with:
           message: ${{ github.event.inputs.message }}
