Update and rename vuln-workflow to vuln-workflow.yml

--- a/.github/workflows/vuln-workflow.yml
+++ b/.github/workflows/vuln-workflow.yml
@@ -3,7 +3,9 @@ on:
   workflow_dispatch:
   
 jobs:
-  run:
+  test:
+    runs-on: ubuntu-latest
+    name: Analyze
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
